<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="txt_cover">Cover</string>
    <string name="txt_share">Share</string>
    <string name="txt_back">Back</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_play_trailer">Play Trailer</string>
    <string name="txt_add_to_watchlist">Add To Watchlist</string>

    <string name="txt_msg_empty_data">Empty Data</string>
    <string name="txt_msg_unable_to_load_newest_data">Unable to load the newest %s data at this time.\nPlease check your internet connection and try again.</string>
    <string name="txt_msg_unable_to_load_data">Unable to load the data at this time.\nPlease check your internet connection.</string>
    <string name="txt_msg_trailer_unavailable">Trailer for this movie or tv show is unavailable for now.</string>
    <string name="txt_remove_from_watchlist">Remove From Watchlist</string>

    <string name="txt_share_movie_detail">🎬 Just explored the details of a movie called \"%s\" on What2Watch!\n\n🍿 Check out this awesome app for all the latest Movie and TV Show information.\n\n📺 #What2Watch #MovieAddict</string>
    <string name="txt_share_tv_show_detail">🎬 Just explored the details of a tv show called \"%s\" on What2Watch!\n\n🍿 Check out this awesome app for all the latest Movie and TV Show information.\n\n📺 #What2Watch #TVShowAddict</string>
</resources>