<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/srlDetail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <include
            android:id="@+id/shimmerLoading"
            layout="@layout/shimmer_multi_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />

        <include
            android:id="@+id/error"
            layout="@layout/layout_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/svContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clButtons"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/ivCover"
                    android:layout_width="0dp"
                    android:layout_height="360dp"
                    android:contentDescription="@string/txt_cover"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic"
                    />

                <Button
                    android:id="@+id/btnBack"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/txt_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:icon="@drawable/ic_back"
                    />

                <Button
                    android:id="@+id/btnShare"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/txt_share"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:icon="@drawable/ic_share"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="-48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivCover"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/tvTitleDetail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="12dp"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="This is A Sample of Movie or Tv Show Title"
                            />

                        <TextView
                            android:id="@+id/tvQuote"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="4dp"
                            android:textAlignment="center"
                            android:textStyle="italic"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvTitleDetail"
                            tools:text="This is A Sample of Movie or TV Show Quote"
                            />

                        <com.google.android.material.divider.MaterialDivider
                            android:id="@+id/dividerTop"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginHorizontal="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvQuote"
                            />

                        <TextView
                            android:id="@+id/tvCategories"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="8dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/dividerTop"
                            tools:text="Action, Fantasy, Adventure"
                            />

                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:drawablePadding="4dp"
                            app:drawableStartCompat="@drawable/ic_rating_outline"
                            app:layout_constraintEnd_toStartOf="@id/tvTime"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvCategories"
                            tools:text="4.5"
                            />

                        <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:gravity="center_vertical"
                            android:drawablePadding="4dp"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_time"
                            app:layout_constraintBottom_toBottomOf="@id/tvRating"
                            app:layout_constraintEnd_toStartOf="@id/tvDate"
                            app:layout_constraintStart_toEndOf="@id/tvRating"
                            app:layout_constraintTop_toTopOf="@id/tvRating"
                            tools:text="2h 5m"
                            />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:gravity="center_vertical"
                            android:drawablePadding="4dp"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_calendar"
                            app:layout_constraintBottom_toBottomOf="@id/tvRating"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/tvTime"
                            app:layout_constraintTop_toTopOf="@id/tvRating"
                            tools:text="04 June 2021"
                            />

                        <com.google.android.material.divider.MaterialDivider
                            android:id="@+id/dividerBottom"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginHorizontal="12dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvRating"
                            />

                        <TextView
                            android:id="@+id/tvOverviewTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/txt_overview"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/dividerBottom"
                            />

                        <TextView
                            android:id="@+id/tvOverview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="12dp"
                            android:justificationMode="inter_word"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvOverviewTitle"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                            tools:targetApi="o" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="12dp"
            >

            <Button
                android:id="@+id/btnPlayTrailer"
                style="@style/PrimaryButtonNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/txt_play_trailer"
                app:icon="@drawable/ic_play"
                app:iconGravity="textStart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnWatchlist"
                />

            <ProgressBar
                android:id="@+id/progressBarTrailer"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_rounded_full_white"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/btnPlayTrailer"
                app:layout_constraintEnd_toEndOf="@id/btnPlayTrailer"
                app:layout_constraintTop_toTopOf="@id/btnPlayTrailer"
                app:layout_constraintBottom_toBottomOf="@id/btnPlayTrailer"
                />

            <Button
                android:id="@+id/btnWatchlist"
                style="@style/PrimaryButtonNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_to_watchlist"
                app:icon="@drawable/ic_list_add"
                app:iconGravity="textStart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnPlayTrailer"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>